REGRESSION: WebGPU in Safari Technology Preview 201 renders transparent pixels as opaque black https://bugs.webkit.org/show_bug.cgi?id=278225#add_comment radar://134068037

Reviewed by Dan Glastonbury.

Alpha pre-multiplication should not impact the alpha channel.

but for now, just remove the two problematic lines.

* Source/WebCore/Modules/WebGPU/GPUQueue.cpp:
(WebCore::copyToDestinationFormat):

Canonical link: https://commits.webkit.org/282409@main